Save out of paranoia

--- a/Final Project/vgg.ipynb
+++ b/Final Project/vgg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "vgg",
       "provenance": [],
-      "authorship_tag": "ABX9TyOs5A8oW1OgtCUESWmSy5Qt",
+      "authorship_tag": "ABX9TyPwgnfqshtNJJY0oZTMOdFk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
         "                              sampler=SubsetRandomSampler(valid_split_index))\n",
         "test_dataloader = DataLoader(test_data, batch_size=batch_size)"
       ],
-      "execution_count": 83,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -490,32 +490,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e3upNoHIiLZo"
-      },
-      "source": [
-        "# Test function\n",
-        "def test(dataloader, model, loss_fn):\n",
-        "  size = len(dataloader.dataset)\n",
-        "  num_batches = len(dataloader)\n",
-        "  model.eval()\n",
-        "  test_loss, correct = 0, 0\n",
-        "  with torch.no_grad():\n",
-        "    for X, y in dataloader:\n",
-        "      X, y = X.to(device), y.to(device)\n",
-        "      pred = model(X)\n",
-        "      test_loss += loss_fn(pred, y).item()\n",
-        "      correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
-        "  test_loss /= num_batches\n",
-        "  correct /= size\n",
-        "  print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n",
-        "  return test_loss"
-      ],
-      "execution_count": 89,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "sw_9E3WwiNk2"
       },
       "source": [
@@ -537,6 +511,32 @@
         "  return val_loss"
       ],
       "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e3upNoHIiLZo"
+      },
+      "source": [
+        "# Test function\n",
+        "def test(dataloader, model, loss_fn):\n",
+        "  size = len(dataloader.dataset)\n",
+        "  num_batches = len(dataloader)\n",
+        "  model.eval()\n",
+        "  test_loss, correct = 0, 0\n",
+        "  with torch.no_grad():\n",
+        "    for X, y in dataloader:\n",
+        "      X, y = X.to(device), y.to(device)\n",
+        "      pred = model(X)\n",
+        "      test_loss += loss_fn(pred, y).item()\n",
+        "      correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+        "  test_loss /= num_batches\n",
+        "  correct /= size\n",
+        "  print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n",
+        "  return test_loss"
+      ],
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -615,9 +615,9 @@
         "id": "VYuXODQCiTfK"
       },
       "source": [
-        "n_epochs = 3"
+        "n_epochs = 10"
       ],
-      "execution_count": 163,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -630,7 +630,7 @@
         "num_param = sum(p.numel() for p in model.parameters())\n",
         "num_param_trainable = sum(p.numel() for p in model.parameters() if p.requires_grad)"
       ],
-      "execution_count": 164,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -640,13 +640,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k9o6wzlUp2me",
-        "outputId": "71288ac7-fb0b-408b-dc8c-ee15b0d27ee0"
+        "outputId": "b1c7bb60-6a0d-481a-a7b5-89c40f76af46"
       },
       "source": [
         "# Apply initialization\n",
         "model.apply(initialize_weights)"
       ],
-      "execution_count": 165,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +698,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 165
+          "execution_count": 170
         }
       ]
     },
@@ -718,7 +718,7 @@
         "# Scheduler\n",
         "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer=optimizer, mode='min', patience=5)"
       ],
-      "execution_count": 166,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -728,13 +728,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vq_I8SBrix5M",
-        "outputId": "3301cf32-0671-4e9b-d9dd-a186eef90c0f"
+        "outputId": "74400810-ed22-4f05-b254-e0f7c31d426c"
       },
       "source": [
         "training_loop(n_epochs, model, train_dataloader, valid_dataloader, batch_size,\n",
-        "              loss_fn, optimizer, early_stopping=True, patience=10)"
+        "              loss_fn, optimizer, scheduler, early_stopping=True, patience=10)"
       ],
-      "execution_count": 167,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,37 +743,114 @@
             "\n",
             "Epoch 1\n",
             "----------------------------\n",
-            "loss: 4.605896 [    0/40000]\n",
-            "loss: 4.613282 [10000/40000]\n",
-            "loss: 4.505758 [20000/40000]\n",
-            "loss: 4.431888 [30000/40000]\n",
+            "loss: 4.604862 [    0/40000]\n",
+            "loss: 4.603656 [10000/40000]\n",
+            "loss: 4.607277 [20000/40000]\n",
+            "loss: 4.609270 [30000/40000]\n",
             "Validation Error: \n",
-            " Validation accuracy: 2.9%, Validation loss: 4.246157 \n",
+            " Validation accuracy: 1.0%, Validation loss: 4.605241 \n",
             "\n",
             "Storing new best model.\n",
             "\n",
             "Epoch 2\n",
             "----------------------------\n",
-            "loss: 4.128386 [    0/40000]\n",
-            "loss: 4.395105 [10000/40000]\n",
-            "loss: 3.985777 [20000/40000]\n",
-            "loss: 4.077597 [30000/40000]\n",
+            "loss: 4.604470 [    0/40000]\n",
+            "loss: 4.359371 [10000/40000]\n",
+            "loss: 4.281742 [20000/40000]\n",
+            "loss: 4.323830 [30000/40000]\n",
             "Validation Error: \n",
-            " Validation accuracy: 5.3%, Validation loss: 4.000291 \n",
+            " Validation accuracy: 3.4%, Validation loss: 4.187867 \n",
             "\n",
             "Storing new best model.\n",
             "\n",
             "Epoch 3\n",
             "----------------------------\n",
-            "loss: 4.065510 [    0/40000]\n",
-            "loss: 4.002787 [10000/40000]\n",
-            "loss: 3.850573 [20000/40000]\n",
-            "loss: 3.979860 [30000/40000]\n",
+            "loss: 4.260411 [    0/40000]\n",
+            "loss: 4.339535 [10000/40000]\n",
+            "loss: 4.077826 [20000/40000]\n",
+            "loss: 3.972476 [30000/40000]\n",
             "Validation Error: \n",
-            " Validation accuracy: 8.1%, Validation loss: 3.826275 \n",
+            " Validation accuracy: 6.7%, Validation loss: 3.954978 \n",
             "\n",
             "Storing new best model.\n",
-            "Saving best model: VGG-16_epoch-003\n"
+            "\n",
+            "Epoch 4\n",
+            "----------------------------\n",
+            "loss: 4.051569 [    0/40000]\n",
+            "loss: 3.926086 [10000/40000]\n",
+            "loss: 3.970678 [20000/40000]\n",
+            "loss: 3.873521 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 8.3%, Validation loss: 3.799049 \n",
+            "\n",
+            "Storing new best model.\n",
+            "\n",
+            "Epoch 5\n",
+            "----------------------------\n",
+            "loss: 3.672399 [    0/40000]\n",
+            "loss: 3.668880 [10000/40000]\n",
+            "loss: 3.614783 [20000/40000]\n",
+            "loss: 3.537607 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 11.4%, Validation loss: 3.627759 \n",
+            "\n",
+            "Storing new best model.\n",
+            "\n",
+            "Epoch 6\n",
+            "----------------------------\n",
+            "loss: 3.619046 [    0/40000]\n",
+            "loss: 3.527274 [10000/40000]\n",
+            "loss: 3.461090 [20000/40000]\n",
+            "loss: 3.581587 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 14.1%, Validation loss: 3.476054 \n",
+            "\n",
+            "Storing new best model.\n",
+            "\n",
+            "Epoch 7\n",
+            "----------------------------\n",
+            "loss: 3.381685 [    0/40000]\n",
+            "loss: 3.430326 [10000/40000]\n",
+            "loss: 3.359295 [20000/40000]\n",
+            "loss: 3.692812 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 17.9%, Validation loss: 3.268329 \n",
+            "\n",
+            "Storing new best model.\n",
+            "\n",
+            "Epoch 8\n",
+            "----------------------------\n",
+            "loss: 3.006672 [    0/40000]\n",
+            "loss: 3.201863 [10000/40000]\n",
+            "loss: 3.020606 [20000/40000]\n",
+            "loss: 3.367815 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 20.3%, Validation loss: 3.173510 \n",
+            "\n",
+            "Storing new best model.\n",
+            "\n",
+            "Epoch 9\n",
+            "----------------------------\n",
+            "loss: 3.032704 [    0/40000]\n",
+            "loss: 2.811286 [10000/40000]\n",
+            "loss: 3.027662 [20000/40000]\n",
+            "loss: 2.955973 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 23.5%, Validation loss: 3.028594 \n",
+            "\n",
+            "Storing new best model.\n",
+            "\n",
+            "Epoch 10\n",
+            "----------------------------\n",
+            "loss: 2.561258 [    0/40000]\n",
+            "loss: 2.546131 [10000/40000]\n",
+            "loss: 2.500373 [20000/40000]\n",
+            "loss: 2.745464 [30000/40000]\n",
+            "Validation Error: \n",
+            " Validation accuracy: 24.8%, Validation loss: 2.989032 \n",
+            "\n",
+            "Storing new best model.\n",
+            "Saving best model: VGG-16_epoch-010\n"
           ]
         }
       ]
