Just for safety...

--- a/Final Project/resnet.ipynb
+++ b/Final Project/resnet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "resnet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+og7UjMZTCmZoxIdsOKOK",
+      "authorship_tag": "ABX9TyObk7BIRWvxRPaXB9+ofYzz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2931,11 +2931,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W-2WhN_bETD2",
-        "outputId": "b211258c-8b58-4e4e-dc0b-a10ebbfef75c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W-2WhN_bETD2",
+        "outputId": "b211258c-8b58-4e4e-dc0b-a10ebbfef75c"
       },
       "source": [
         "# No data augmentation\n",
@@ -3364,12 +3364,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ye5w6S9XCAg5",
-        "outputId": "d98c5778-fe35-4886-bb2e-a3624f77b158",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "ye5w6S9XCAg5",
+        "outputId": "d98c5778-fe35-4886-bb2e-a3624f77b158"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
@@ -3410,12 +3410,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bTxXzny-EqUJ",
-        "outputId": "679248d0-5459-4544-df7a-bdcbe3c3ce68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "bTxXzny-EqUJ",
+        "outputId": "679248d0-5459-4544-df7a-bdcbe3c3ce68"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
@@ -3465,11 +3465,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C7kvOEvFE8YJ",
-        "outputId": "fcd486ef-c007-4d12-d580-2637a7e03b08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C7kvOEvFE8YJ",
+        "outputId": "fcd486ef-c007-4d12-d580-2637a7e03b08"
       },
       "source": [
         "# with data augmentation\n",
@@ -4590,16 +4590,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n1P7T7BNE9D9",
-        "outputId": "f53e6890-7d2a-420f-9130-728e7aed2de1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "n1P7T7BNE9D9",
+        "outputId": "f53e6890-7d2a-420f-9130-728e7aed2de1"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
-        "plt.title(f\"Train and Validation Loss for {model_32_aug.name}\")\n",
+        "plt.title(f\"Train and Validation Loss for {model_32_aug.name} with Data Augmentation\")\n",
         "plt.plot(val_loss_32_aug, label=\"val_loss\")\n",
         "plt.plot(train_loss_32_aug, label=\"train_loss\")\n",
         "plt.xlabel(\"Epochs\")\n",
@@ -4636,16 +4636,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gk0mctqOE8yw",
-        "outputId": "93eb6a19-dc16-4078-96b7-bda1faf532b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "Gk0mctqOE8yw",
+        "outputId": "93eb6a19-dc16-4078-96b7-bda1faf532b0"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
-        "plt.title(f\"Train and Validation Accuracy for {model_32_aug.name}\")\n",
+        "plt.title(f\"Train and Validation Accuracy for {model_32_aug.name} with Data Augmentation\")\n",
         "plt.plot(val_accuracy_32_aug, label=\"val_accuracy\")\n",
         "plt.plot(train_accuracy_32_aug, label=\"train_accuracy\")\n",
         "plt.xlabel(\"Epochs\")\n",
@@ -4693,11 +4693,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-MCrozfAGGLZ",
-        "outputId": "3ceb8293-bef0-446d-a7d4-1106c67cad73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-MCrozfAGGLZ",
+        "outputId": "3ceb8293-bef0-446d-a7d4-1106c67cad73"
       },
       "source": [
         "# No data augmentation\n",
@@ -5071,12 +5071,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6B15oOinGG5c",
-        "outputId": "da1ae867-90bb-4a89-e6f2-6688016be787",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "6B15oOinGG5c",
+        "outputId": "da1ae867-90bb-4a89-e6f2-6688016be787"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
@@ -5117,12 +5117,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "45Hs6YAhGGzC",
-        "outputId": "57b0d454-fd64-44c0-a5dc-45c347ee37f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "45Hs6YAhGGzC",
+        "outputId": "57b0d454-fd64-44c0-a5dc-45c347ee37f8"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
@@ -5172,11 +5172,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aWXkT3v7GPQh",
-        "outputId": "3814bdf6-8c20-4acf-c883-123e3c7f18f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aWXkT3v7GPQh",
+        "outputId": "3814bdf6-8c20-4acf-c883-123e3c7f18f3"
       },
       "source": [
         "# with data augmentation\n",
@@ -6297,12 +6297,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hOAJIAYPGP8J",
-        "outputId": "907022dd-114f-4632-8cea-598ae0b8b9cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "hOAJIAYPGP8J",
+        "outputId": "907022dd-114f-4632-8cea-598ae0b8b9cd"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
@@ -6343,12 +6343,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mVMPILnKGP0Z",
-        "outputId": "002fcc96-e33d-4208-e101-7cae92d82d02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "id": "mVMPILnKGP0Z",
+        "outputId": "002fcc96-e33d-4208-e101-7cae92d82d02"
       },
       "source": [
         "plt.figure(figsize=(15,8))\n",
