Almost lost this again...

--- a/Final Project/small_convnet.ipynb
+++ b/Final Project/small_convnet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "small_convnet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEC7uGR85GAvgegyvYZmOi",
+      "authorship_tag": "ABX9TyOcjT6yR21x+RfMdnaGh6ev",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,7 +471,7 @@
         "    self.name = name\n",
         "    self.basic_conv_net = nn.Sequential(\n",
         "        # 1st layer\n",
-        "        nn.Conv2d(3, 50, (3,3), padding='same'),\n",
+        "        nn.Conv2d(3, 50, (3,3), padding='same'), # can explicitly put padding = 1\n",
         "        nn.BatchNorm2d(50),\n",
         "        nn.ReLU(),\n",
         "        nn.Dropout2d(p=dropout_conv),\n",
@@ -2685,19 +2685,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "F2IwyMMPYOLz"
-      },
-      "source": [
-        "# Results\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Model with data augmentation and `lr=5e-4` for 50 epochs: **Validation accuracy: 54.7%, Validation loss: 1.657589**."
       ]
     },
     {
